# linear_attention

./: .gitignore  README.md  main.py  pyproject.toml
dataset/: enwik8_dataset.py  image_gen_dataset.py  synthetic_dataset.py
model/: base.py  base_model.py  efficient_attention.py  free_attention.py  image_transformer.py  linear_attention.py  modern_transformer.py  original_transformer.py  simplest_transformer.py
task/: README.md  enwik8_task.py  image_gen_task.py  synthetic_copy_task.py  synthetic_task.py
