[project]
name = "linear-attention"
version = "0.0.4"
description = "Research the Linear Attention"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.4",
    "tensorboard>=2.20.0",
    "torch>=2.11.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
